improved auth functionality

--- a/src/app/account/authentication/login/account.authentication.login.tpl.html
+++ b/src/app/account/authentication/login/account.authentication.login.tpl.html
@@ -39,7 +39,7 @@
             </p>
 
             <p class="text-center text-muted">
-                <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
+                <small>Don't have an account yet? <a href="/account/signup">Sign up</a></small>
             </p>
         </form>
     </div>
