improved accounts settings with google maps and image  upload support

--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -1,5 +1,12 @@
 .account-settings {
 
+  #addr-map-canvas, .map-canvas {
+    border: 1px solid #454545;
+    width: 90%;
+    height: 140px;
+    margin: auto;
+  }
+
   .panel-content {
     padding: 10px;
     font-size: 12px;
@@ -38,12 +45,17 @@
 
   .manage {
     background-color: #a88f32;
-    color: #fff
+    color: #fff;
+  }
+
+  .profile {
+    background-color: #df9300;
+    color: #fff;
   }
 
   .enthusiast {
-    background-color: #df9300;
-    color: #fff
+    background-color: #7fdf4b;
+    color: #fff;
   }
 
   .coaching {
