--- a/src/app/account/settings/manage/account.settings.manage.tpl.html
+++ b/src/app/account/settings/manage/account.settings.manage.tpl.html
@@ -1,6 +1,22 @@
 <div class="account-settings-manage">
     <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
+            <div class="panel-heading profile">
+                <a href="{{quickSettings.profiles.url}}">
+                    <h4 class="panel-title">{{quickSettings.profiles.title}}</h4>
+                </a>
+            </div>
+            <div class="panel-collapse">
+                <div class="panel-body">
+                    <div>
+                        <p>Update your Personal and Contact Details, Profile Picture etc.</p>
+
+                        <p><a href="{{quickSettings.profile.url}}">Click Here</a> to manage your profile.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 form-group">
             <div class="panel-heading enthusiast">
                 <a href="{{quickSettings.enthusiasts.url}}">
                     <h4 class="panel-title">{{quickSettings.enthusiasts.title}}</h4>
@@ -27,7 +43,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading playing">
                 <a href="{{quickSettings.players.url}}">
                     <h4 class="panel-title">{{quickSettings.players.title}}</h4>
@@ -49,10 +65,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading coaching">
                 <a href="{{quickSettings.coaches.url}}">
                     <h4 class="panel-title">{{quickSettings.coaches.title}}</h4>
@@ -75,8 +88,9 @@
         </div>
     </div>
 
+
     <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading facilities">
                 <a href="/{{quickSettings.facilities.url}}">
                     <h4 class="panel-title">{{quickSettings.facilities.title}}</h4>
@@ -103,10 +117,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading suppliers">
                 <a href="{{quickSettings.suppliers.url}}">
                     <h4 class="panel-title">{{quickSettings.suppliers.title}}</h4>
@@ -136,8 +147,9 @@
         </div>
     </div>
 
+
     <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading events">
                 <a href="{{quickSettings.events.url}}">
                     <h4 class="panel-title">{{quickSettings.events.title}}</h4>
@@ -164,10 +176,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12 form-group">
+        <div class="col-sm-6 form-group">
             <div class="panel-heading offers">
                 <a href="{{quickSettings.offers.url}}">
                     <h4 class="panel-title">{{quickSettings.offers.title}}</h4>
