--- a/src/app/account/settings/offers/account.settings.offers.tpl.html
+++ b/src/app/account/settings/offers/account.settings.offers.tpl.html
@@ -20,21 +20,7 @@
                     <div ng-message="server">{{offerForm.provider.$error.serverMessage}}</div>
                 </div>
             </div>
-            <div class="col-sm-7 form-group pull-right">
-                <div class="input-group">
-                    <input type="file" accept="image/*" name="imgUrl" image="image2"
-                           resize-max-height="300" ng-model="entity.imgUrl"
-                           resize-max-width="250" class="form-control file"
-                           resize-quality="0.7"  placeholder="Upload Gallery Pic" />
-                </div>
-                <div class="infoMessages">
-                    <div>(size 200px x 100px, format: jpg/png/ gif)</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-8 form-group">
+            <div class="col-sm-7 form-group">
                 <input type="text"
                        name="heading"
                        class="form-control"
@@ -82,13 +68,12 @@
                            datepicker-options="datePickerOptions"
                            ng-change="dateTimePickerChanged('startDatePickerOpened')"
                            ng-required="true"/>
-
-                    <div ng-if="offerForm.startDate.$dirty" ng-messages="offerForm.startDate.$error"
-                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
-                        <div ng-message="server">{{offerForm.startDate.$error.serverMessage}}</div>
-                    </div>
                     <span class="input-group-addon" ng-click="openDateTimePicker($event, 'startDatePickerOpened')"><i
                             class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+                <div ng-if="offerForm.startDate.$dirty" ng-messages="offerForm.startDate.$error"
+                     class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                    <div ng-message="server">{{offerForm.startDate.$error.serverMessage}}</div>
                 </div>
             </div>
             <div class="col-sm-5 form-group pull-right">
@@ -104,13 +89,12 @@
                            datepicker-options="datePickerOptions"
                            ng-change="dateTimePickerChanged('endDatePickerOpened')"
                            ng-required="true"/>
-
-                    <div ng-if="offerForm.endDate.$dirty" ng-messages="offerForm.endDate.$error"
-                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
-                        <div ng-message="server">{{offerForm.endDate.$error.serverMessage}}</div>
-                    </div>
                     <span class="input-group-addon" ng-click="openDateTimePicker($event, 'endDatePickerOpened')"><i
                             class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+                <div ng-if="offerForm.endDate.$dirty" ng-messages="offerForm.endDate.$error"
+                     class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                    <div ng-message="server">{{offerForm.endDate.$error.serverMessage}}</div>
                 </div>
             </div>
         </div>
@@ -195,6 +179,12 @@
         </div>
 
         <div class="row">
+            <div class="col.sm-12 form-group">
+                <div id="addr-map-canvas"></div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-sm-4 form-group">
                 <input type="email"
                        name="email"
@@ -215,6 +205,8 @@
                        placeholder="Contact Phone 1"
                        ng-model="entity.phoneOne"
                        minlength="10"
+                       maxlength="10"
+                       length="10"
                        required/>
 
                 <div ng-if="offerForm.phoneOne.$dirty" ng-messages="offerForm.phoneOne.$error"
@@ -228,7 +220,9 @@
                        class="form-control"
                        placeholder="Contact Phone 2"
                        ng-model="entity.phoneTwo"
-                       minlength="10"/>
+                       minlength="10"
+                       maxlength="10"
+                       length="10"/>
 
                 <div ng-if="offerForm.phoneTwo.$dirty" ng-messages="offerForm.phoneTwo.$error"
                      class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
@@ -237,7 +231,7 @@
             </div>
         </div>
 
-        <div class="row border-bottom form-group">
+        <div class="row">
             <div class="col-sm-8 form-group">
                 <input type="url"
                        name="url"
@@ -250,6 +244,27 @@
                      class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
                     <div ng-message="server">{{offerForm.url.$error.serverMessage}}</div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row border-bottom form-group">
+            <div class="col-sm-5 form-group">
+                <div class="input-group">
+                    <input type="text" placeholder="Offer Pic (200x100)" value="{{entityImage.name}}" class="form-control">
+                    <span class="input-group-addon btn btn-default btn-file">
+                        Browse
+                        <input type="file"
+                               accept="image/*"
+                               resize-type="image/jpg"
+                               image="entityImage"
+                               resize-max-width="200"
+                               resize-max-height="100"/>
+                    </span>
+                </div>
+                <div class="infoMessages">Size: 200x100px</div>
+            </div>
+            <div class="col-sm-6" ng-if="entityImage">
+                <img ng-src="{{entityImage.resized.dataURL}}"/>
             </div>
         </div>
 
