--- a/src/app/shared/header/header.tpl.html
+++ b/src/app/shared/header/header.tpl.html
@@ -1,4 +1,4 @@
-<div id="zingy-header" ng-controller="header.ctrl">
+<div id="top-header" ng-controller="header.ctrl">
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
