--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -1,4 +1,4 @@
-#zingy-header {
+#top-header {
   .navbar-collapse {
     width: 169px;
     height: 40px;
@@ -73,7 +73,7 @@
     float: right;
   }
 
-  #zingy-header {
+  #top-header {
     .navbar-collapse {
       float: right;
     }
@@ -113,7 +113,7 @@
     padding-bottom: 20px;
   }
 
-  #zingy-header {
+  #top-header {
     .navbar-collapse {
       width: 200px;
     }
@@ -122,7 +122,7 @@
 }
 
 @media (min-width: 1200px) {
-  #zingy-header {
+  #top-header {
     .container {
       width: 1070px;
       height: 40px;
